pkl-core/src/test/files/LanguageSnippetTests/input/errors/reference24.pkl
import "pkl:ref"

class D extends ref.Domain {
  function renderReference(_): String = throw("not implemented")
}

class Bird {
  name: String
}

class Holder {
  $: Bird | Int
}

myRef: ref.Reference<D, Bird | Int> = ref.Reference(new D {}, Holder, null).$

res = myRef.name
